h2 dark mode fix

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -93,6 +93,10 @@ h2 {
   line-height: 30px;
 }
 
+.dark h2 {
+  color: #fff;
+}
+
 p {
   margin: 20px 0;
 }
